--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.2.0",
     "@react-native-community/masked-view": "0.1.6",
     "expo": "~37.0.3",
     "expo-font": "~8.1.0",
@@ -21,6 +22,7 @@
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.9",
     "react-navigation-drawer": "^2.4.13",
+    "react-navigation-header-buttons": "^4.0.2",
     "react-navigation-stack": "^2.7.0",
     "react-navigation-tabs": "^2.8.13"
   },
