--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-paper": "^3.10.1",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
@@ -23,6 +24,7 @@
     "react-navigation": "^4.3.9",
     "react-navigation-drawer": "^2.4.13",
     "react-navigation-header-buttons": "^4.0.2",
+    "react-navigation-material-bottom-tabs": "^2.2.12",
     "react-navigation-stack": "^2.7.0",
     "react-navigation-tabs": "^2.8.13"
   },
