--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "redux": "^4.0.5"
   },
   "devDependencies": {
-    "babel-preset-expo": "~8.1.0",
-    "@babel/core": "^7.8.6"
+    "@babel/core": "^7.12.10",
+    "babel-preset-expo": "~8.1.0"
   },
   "private": true
 }
